# MARS

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: aggregate_chemprop_metrics.py  aggregate_component_evidence.py  aggregate_conformal_risk_control_multiseed.py  aggregate_neural_calibration.py  aggregate_neural_multiseed.py  aggregate_reliability_benchmark_multiseed.py  aggregate_revision_evidence.py  analyze_neural_calibration_outputs.py  build_internal_sota_claim_audit.py  build_ours_variant_tables.py  launch_full_followup_batch.py  launch_neural_multiseed.py  launch_neural_prediction_dump.py  launch_topjournal_followup_batch.py  quick_fingerprint_baselines.py  run_activity_cliff_novelty.py  run_activity_cliff_targeted.py  run_anchor_case_studies.py  run_anchor_hybrid_probe.py  run_anchor_k_sensitivity.py  run_anchor_reliability_probe.py  run_anchor_stratified_analysis.py  run_calibration_benchmark.py  run_chemprop_baseline.py  run_chemprop_strict_ood_baseline.py  run_conformal_risk_control.py  run_conformer_sensitivity.py  run_cross_dataset_transfer.py  run_external_admet_probe.py  run_gin_embedding_anchor_probe.py  run_leakage_shift_uq_bootstrap.py  run_pretrained_smiles_baselines.py  run_realistic_ood_splits.py  run_reliability_benchmark.py  run_retrieval_scalability.py  run_selective_screening_utility.py  run_strict_ood_model_matrix.py  run_strong_descriptor_baselines.py  summarize_anchor_stratified_analysis.py  train_gin_baseline.py  (+2 more)
tests/: test_aggregate_neural_multiseed.py  test_anchor_k_sensitivity_script.py  test_anchor_reliability.py  (+18 more)
(+12 files in other folders)
